# sceptre-phenix-apps

./: .codespellrc  .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md
src/python/: .coverage  .gitignore  CHANGELOG.md  Makefile  README.md  app_migration_guide.md  docker-build.sh  package.sh  pyproject.toml  setup.py
src/python/phenix_apps/: CHANGELOG.md
src/python/phenix_apps/apps/: __init__.py
src/python/phenix_apps/apps/caldera/: README.md  __main__.py  app.py  caldera.py
src/python/phenix_apps/apps/caldera/templates/: default_config.mako  firefox_autostart.mako  firefox_bookmark.mako  linux_agent.mako  windows_agent.mako
src/python/phenix_apps/apps/dns/: README.md  __main__.py  dns.py
src/python/phenix_apps/apps/dns/templates/: dnsmasq.conf.mako  dnsmasq_start.sh.mako  hosts.mako  resolv.conf.mako  stop_resolved.sh.mako
src/python/phenix_apps/apps/helics/: README.md  __main__.py  app.py  helics.py
src/python/phenix_apps/apps/helics/templates/: broker.mako  wait_broker.mako
src/python/phenix_apps/apps/mgmt_tap/: __main__.py  app.py  mgmt_tap.py
src/python/phenix_apps/apps/otsim/: README.md  __main__.py  app.py  config.py  device.py  infrastructure.py  logic.py  nodered.py  otsim.py
src/python/phenix_apps/apps/otsim/protocols/: dnp3.py  modbus.py  protocol.py
src/python/phenix_apps/apps/otsim/templates/: helics_broker.mako  wait_broker.mako
src/python/phenix_apps/apps/protonuke/: README.md  __main__.py  app.py  protonuke.py
src/python/phenix_apps/apps/protonuke/templates/: protonuke.ps1.mako  protonuke_scheduler.mako
src/python/phenix_apps/apps/scale/: README.md  __main__.py  app.py  conftest.py  interface.py  registry.py
src/python/phenix_apps/apps/scale/plugins/: builtin.md  builtin.py  wind_turbine.md  wind_turbine.py
src/python/phenix_apps/apps/scale/plugins/builtin/: README.md  __init__.py  plugin.py
src/python/phenix_apps/apps/scale/plugins/builtin/tests/: test_builtin.py
src/python/phenix_apps/apps/scale/plugins/wind_turbine/: README.md  __init__.py  plugin.py
src/python/phenix_apps/apps/scale/plugins/wind_turbine/templates/: wind_turbine.mako
src/python/phenix_apps/apps/scale/plugins/wind_turbine/tests/: test_wind_turbine.py  test_wind_turbine_input.yaml
src/python/phenix_apps/apps/scale/templates/: minimega.mako
src/python/phenix_apps/apps/scale/tests/: test_interface.py  test_registry.py  test_scale.py  test_scale_input.yaml  test_wind_turbine.py
src/python/phenix_apps/apps/sceptre/: __init__.py  __main__.py  app.py  sceptre.py  sceptre.spec
src/python/phenix_apps/apps/sceptre/configs/: configs.py  infrastructures.py  reg_map_gen.py
src/python/phenix_apps/apps/sceptre/protocols/sunspec/: __init__.py
src/python/phenix_apps/apps/sceptre/templates/: auto_winscp.mako  elk.mako  fd_client.mako  fd_server.mako  fep_template.mako  helics_config.mako  historian.mako  historian_config.mako  hmi.mako  opc_channel_template.mako  opc_device_template.mako  opc_tag_template.mako  opc_template.mako  provider_config.mako  putty.mako  scada.mako  scada_autoproject.mako  scada_connectionsdef.mako  scada_table.mako  sceptre-startup-scheduler.mako  sceptre-startup.ps1  sceptre_start.mako  sunspec.mako  topserver.mako
src/python/phenix_apps/apps/sceptre/templates/mydesigner/: colors.css  default.dlg.json  groups.json  setting.json  tag.db  translations.json  views.json
src/python/phenix_apps/apps/sceptre/templates/mydesigner/Layouts/: layoutViews.csv
src/python/phenix_apps/apps/sceptre/templates/mydesigner/Python/: main.py
src/python/phenix_apps/apps/scorch/: __init__.py  app.py
src/python/phenix_apps/apps/scorch/art/: README.md  art.py
src/python/phenix_apps/apps/scorch/caldera/: README.md  caldera.py
src/python/phenix_apps/apps/scorch/caldera/templates/: api_call.mako  get_operation.mako  get_operation_report.mako  new_operation.mako
src/python/phenix_apps/apps/scorch/cc/: README.md  cc.py
src/python/phenix_apps/apps/scorch/collector/: README.md  collector.py  csv_gen.py
src/python/phenix_apps/apps/scorch/disruption/: README.md  disruption.py
src/python/phenix_apps/apps/scorch/erspan/: README.md  erspan.py
src/python/phenix_apps/apps/scorch/ettercap/: README.md  ettercap.py
src/python/phenix_apps/apps/scorch/hoststats/: README.md  hoststats.py
src/python/phenix_apps/apps/scorch/iperf/: README.md  iperf.py
src/python/phenix_apps/apps/scorch/kafka/: README.md  kafka_component.py  kafka_listener.py
src/python/phenix_apps/apps/scorch/mm/: README.md  mm.py
src/python/phenix_apps/apps/scorch/opcexport/: README.md  delete_scada_to_elastic.py  install-python-opc.ps1  opcexport.py  requirements.txt  scada_to_elastic.py
src/python/phenix_apps/apps/scorch/pcap/: README.md  pcap.py
src/python/phenix_apps/apps/scorch/pipe/: README.md  pipe.py
src/python/phenix_apps/apps/scorch/providerdata/: README.md  providerdata.py
src/python/phenix_apps/apps/scorch/qos/: README.md  qos.py
src/python/phenix_apps/apps/scorch/rtds/: README.md  rtds.py
src/python/phenix_apps/apps/scorch/scenario/: README.md  scenario.py
src/python/phenix_apps/apps/scorch/snort/: README.md  snort.py
src/python/phenix_apps/apps/scorch/ssh/: README.md  ssh.py
src/python/phenix_apps/apps/scorch/tcpdump/: README.md  tcpdump.py
src/python/phenix_apps/apps/scorch/trafficgen/: README.md  trafficgen.py
src/python/phenix_apps/apps/scorch/vmstats/: README.md  vmstats.py
src/python/phenix_apps/apps/wind_turbine/: README.md  __main__.py  app.py  wind_turbine.py
src/python/phenix_apps/apps/wireguard/: __main__.py  app.py  wireguard.py
src/python/phenix_apps/apps/wireguard/templates/: wireguard_config.mako  wireguard_enable.mako
src/python/phenix_apps/common/: error.py  logger.py  settings.py  utils.py
src/python/phenix_apps/common/tests/: test_logger.py  test_utils.py
src/python/phenix_apps/schedulers/: __init__.py
src/python/phenix_apps/schedulers/single_node/: __main__.py  scheduler.py  single_node.py
src/python/phenix_apps/testing/: README.md  plugin.py
src/python/phenix_apps/testing/tests/: test_plugin.py
(+45 files in other folders)
